Update on Overleaf.

--- a/Refs2021.bib
+++ b/Refs2021.bib
@@ -1,3 +1,302 @@
+% Encoding: UTF-8
+  
+@STRING{aa = {Astron. Astrophys.}}
+
+@STRING{aas = {Adv. Atmospheric Sciences}}
+
+@STRING{acie = {Angew. Chem. Int. Ed.}}
+
+@STRING{acp = {Atmos. Chem. Physics}}
+
+@STRING{acpd = {Atmos. Chem. Phys. Discuss.}}
+
+@STRING{ae = {Atmos. Environ.}}
+
+@STRING{aea = {Atmos. Environ. A.}}
+
+@STRING{afm = {Agric. and Forest Meteor.}}
+
+@STRING{ag = {Annales Geophysicae}}
+
+@STRING{aj = {The Astrophysical Journal}}
+
+@STRING{am = {Ambio}}
+
+@STRING{amt = {Atmos. Measurement Techniques}}
+
+@STRING{analchem = {Anal. Chem.}}
+
+@STRING{ao = {Appl. Opt.}}
+
+@STRING{ae = {Atmos. Environ.}}
+
+@STRING{aea = {Atmos. Environ. A.}}
+
+@STRING{afm = {Agric. and Forest Meteor.}}
+
+@STRING{ag = {Annales Geophysicae}}
+
+@STRING{aj = {The Astrophysical Journal}}
+
+@STRING{am = {Ambio}}
+
+@STRING{amt = {Atmos. Measurement Techniques}}
+
+@STRING{analchem = {Anal. Chem.}}
+
+@STRING{ao = {Appl. Opt.}}
+
+@STRING{aoc = {Atmos. Ocean.}}
+
+@STRING{ar = {Atmospheric Research}}
+
+@STRING{aree = {Annu. Rev. Energy Environ.}}
+
+@STRING{asr = {Adv. Space Res.}}
+
+@STRING{ass = {Astrophysics and Space Science}}
+
+@STRING{ast = {Aerosol Sci. Technol.}}
+
+@STRING{ato = {Atmosphere--Ocean}}
+
+@STRING{awr = {Adv. Water Resources}}
+
+@STRING{bams = {Bulletin American Meteorological Society}}
+
+@STRING{ber = {Boreal Environment Research}}
+
+@STRING{bgs = {Biogeosciences}}
+
+@STRING{blm = {Boundary Layer Meteorology}}
+
+@STRING{boreal = {Boreal Env. Res.}}
+
+@STRING{bpa = {Beitr. Phys. Atmosph.}}
+
+@STRING{cap = {Cont. Atmos. Physics}}
+
+@STRING{cc = {Computers Chem.}}
+
+@STRING{cd = {Climate Dynamics}}
+
+@STRING{cjc = {Can. J. Chem.}}
+
+@STRING{cmame = {Comput. Methods Appl. Mech. Eng.}}
+
+@STRING{cp = {Climate Policy}}
+
+@STRING{cr = {Climate Reesearch}}
+
+@STRING{csr = {Cont. Shelf Res.}}
+
+@STRING{dsr = {Deep Sea Res.}}
+
+@STRING{ea = {Ecol. Applications}}
+
+@STRING{em = {Ecol. Modelling}}
+
+@STRING{emh = {Environ. Manag. Health}}
+
+@STRING{ep = {Environ. Poll.}}
+
+@STRING{er = {Environ. Rev.}}
+
+@STRING{erl = {Environ. Res. Lett.}}
+
+@STRING{essd = {Earth System Sci. Data.}}
+
+@STRING{est = {Environ. Sci. Technol.}}
+
+@STRING{et = {Eos, Transactions}}
+
+@STRING{etech = {Environmental Technology}}
+
+@STRING{fd = {Faraday Discuss.}}
+
+@STRING{focus = {Water, Air and Soil Pollution: Focus}}
+
+@STRING{gbc = {Global Biogeochem. Cycles}}
+
+@STRING{gcb = {Global Change Biol.}}
+
+@STRING{gmd = {Geoscientific Model Dev.}}
+
+@STRING{gn = {Geophysica Norvegica}}
+
+@STRING{gpc = {Global and Planetary Change}}
+
+@STRING{grl = {Geophys. Res. Lett.}}
+@STRING{gs = {Geophysical Surveys}}
+
+@STRING{i = {ICARUS}}
+
+@STRING{iiasa = {International Institute for Applied Systems Analysis (IIASA), Laxenburg,
+        Austria}}
+
+@STRING{ijc = {Int. J. of Climatology}}
+
+@STRING{ijep = {Int. J. Environment and Pollution}}
+
+@STRING{ijetm = {Int. J. of Environmental Technology and Management}}
+
+@STRING{ijrs = {Int. J. Remote Sensing}}
+
+@STRING{ivl = {Swedish Environmental Research Institute (IVL), Gothenburg, Sweden}}
+
+@STRING{jac = {J. Atmos. Chem.}}
+
+@STRING{jaers = {J. of Aerosol Science}}
+
+@STRING{jam = {J. Appl. Met.}}
+
+@STRING{japmc = {J. Appl. Met. Climatology}}
+
+@STRING{jas = {J. Atmospheric Sciences}}
+
+@STRING{jastp = {J. of Atmos. Solar--Terr. Phys.}}
+
+@STRING{jatp = {J. of Atmos. Terr. Phys.}}
+
+@STRING{jawma = {J. Air Waste Manage. Assoc.}}
+
+@STRING{jc = {J. of Climate}}
+
+@STRING{jcam = {J. Clim. Appl. Met.}}
+
+@STRING{jcop = {J. Comp. Phys.}}
+
+@STRING{jcp = {J. Chem. Phys.}}
+
+@STRING{jem = {J. Environ. Monit.}}
+
+@STRING{jes = {J. Environ. Sci.}}
+
+@STRING{jgr = {J. Geophys. Res.}}
+
+@STRING{jgra = {J. Geophys. Res.}}
+
+
+@STRING{jgrb = {J. Geophys. Res.}}
+
+@STRING{jma = {J. Math. Phys.}}
+
+@STRING{jmsj = {J. Met. Soc. of Japan}}
+
+@STRING{josa = {J. Opt. Soc. Am.}}
+
+@STRING{jpc = {J. Phys. Chem.}}
+
+@STRING{jpca = {J. Phys. Chem. A}}
+
+@STRING{jpo = {J. Phys. Oceanogr.}}
+
+@STRING{jqsrt = {J. Quant. Spectrosc. Radiat. Transfer}}
+
+@STRING{lo = {Limnol. Oceanogr.}}
+
+@STRING{map = {Meteorol. Atmos. Phys.}}
+
+@STRING{mchem = {Marine Chem.}}
+
+@STRING{meps = {Mar. Ecol. Prog. Ser.}}
+
+@STRING{met = {Metrologia}}
+
+@STRING{metno = {The Norwegian Meteorological Institute, Oslo, Norway}}
+
+@STRING{mic = {Modelling, identification and control}}
+
+@STRING{mnras = {Mon. Not. R. Astr. Soc}}
+
+@STRING{mwr = {Mon. Weather Rev.}}
+
+@STRING{nat = {Nature}}
+
+@STRING{ngeo = {Nature Geoscience}}
+
+@STRING{nhess = {Nat. Hazards Earth Syst. Sci.}}
+
+@STRING{nilu = {The Norwegian Institute for Air Research (NILU), Kjeller, Norway}}
+
+@STRING{NP = {New Phytol.}}
+
+@STRING{nse = {Nuclear Science and Engineering}}
+
+@STRING{o = {Oceanography}}
+
+@STRING{oa = {Optica Acta}}
+
+@STRING{ol = {Origins of Life}}
+
+@STRING{pag = {Pure and Applied Geophysics}}
+
+@STRING{pasj = {Pub. Astron. Soc. of Japan}}
+
+@STRING{pd = {Photodermatology}}
+
+@STRING{phila = {Phil. Trans. R. Soc. Lond. A}}
+
+@STRING{philb = {Phil. Trans. R. Soc. Lond. B}}
+
+@STRING{pla = {Physics Letters A}}
+
+@STRING{pnas = {Proc. Nat. Acad. Sci}}
+
+@STRING{pp = {Photochemistry and Photobiology}}
+
+@STRING{pr = {Physical Review}}
+
+@STRING{prd = {Physical Review D}}
+
+@STRING{proca = {Proc. R. Soc. Lond. A}}
+
+@STRING{procb = {Proc. R. Soc. Lond. B}}
+
+@STRING{pss = {Planet. Space Sci.}}
+
+@STRING{ptrsb = {Philos.Trans. R. Soc. Lond. B. Biol. Sci.}}
+
+@STRING{qjrms = {Q. J. R. Meteorol. Soc.}}
+
+@STRING{rg = {Reviews of Geophysics}}
+
+@STRING{rgsp = {Rev. Geophys. Space Phys.}}
+
+@STRING{rmp = {Rev. Modern. Phys.}}
+
+@STRING{rs = {Radio Science}}
+
+@STRING{rse = {Remote Sensing of environment}}
+
+@STRING{s = {Science}}
+
+@STRING{sg = {Surveys in Geophysics}}
+
+@STRING{siam = {SIAM J. Numer. Anal.}}
+
+@STRING{sp = {Solar Physics}}
+
+@STRING{spj = {Sov. Phys.--JETP}}
+
+@STRING{ssr = {Space Science Reviews}}
+
+@STRING{ste = {Sci. of the Total Environ.}}
+
+@STRING{t = {Tellus}}
+
+@STRING{tac = {Theor. Appl. Climatol.}}
+
+@STRING{tb = {Tellus B: Chem. Phys. Meteor.}}
+%%  {Tellus B: Chemical and Physical Meteorology},
+
+@STRING{tfsc = {Tech. Forecasting \& Social Change}}
+
+@STRING{wasp = {Water, Air and Soil Pollution}}
+
+@STRING{zn = {Z. Naturforsch.}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 @techreport{Klein:2021,
@@ -155,7 +454,7 @@
 
 @article{troenkz,
   author =        {Troen, I. and Mahrt, L.},
-  journal =       {Boundary-Layer Meteorol.},
+  journal =       blm,
   pages =         {129–-148},
   title =         {A simple model of the atmospheric boundary layer:
                    sensitivity to surface evaporation},
@@ -334,7 +633,7 @@
   year =          {2020},
 }
 
-@misc{CONDws2020,
+@TechReport{CONDws2020,
   author =        {Simpson, D. and Fagerli, H. and Colette, A. and
                    Denier van der Gon, H. and Dore, C. and Hallquist, M. and
                    Hansson, H. C. and Maas, R. and Rouil, L. and
@@ -347,12 +646,12 @@
                    Pr{\'e}v{\^o}t, A. S. H. and Schindlbacher, S. and
                    Seljeskog, M. and Sirina-Leboine, N. and Sommers, J. and
                    {\AA}str{\"o}m, S.},
-  note =          {EMEP Technical Report MSC-W 4/2020, ISSN 1504-6206},
+  type =          {{EMEP Technical Report MSC-W 4/2020, ISSN 1504-6206}},
   title =         {How should condensables be included in PM emission
                    inventories reported to EMEP/CLRTAP? Report of the
                    expert workshop on condensable organics organised by
                    MSC-W, Gothenburg, 17-19th March 2020},
-  year =          {2020},
+  year =          {2020}
 }
 
 @article{DeniervanderGon2015,
@@ -518,7 +817,7 @@
 
 @article{Willmott1982,
   author =        {Willmott, Cort J.},
-  journal =       {Bulletin American Meteorological Society},
+  journal =       bams,
   number =        {11},
   pages =         {1309-1313},
   title =         {Some Comments on the Evaluation of Model Performance},
@@ -711,7 +1010,7 @@
 @article{Cavalli:EUSAAR,
   author =        {Cavalli, F. and Viana, M. and Yttri, K. E. and
                    Genberg, J. and Putaud, J.-P.},
-  journal =       {Atmospheric Measurement Techniques},
+  journal =       amt,
   number =        {1},
   pages =         {79--89},
   title =         {Toward a standardised thermal-optical protocol for
@@ -796,7 +1095,7 @@
                    Lurton, T. and Myhre, G. and Neubauer, D. and
                    Olivi\'e, D. and von Salzen, K. and Skeie, R. B. and
                    Takemura, T. and Tilmes, S.},
-  journal =       {Atmospheric Chemistry and Physics},
+  journal =       acp,
   number =        {21},
   pages =         {13355--13378},
   title =         {Evaluation of climate model aerosol trends with
@@ -843,7 +1142,7 @@
                    Cappelletti, A. and D'Isidoro, M. and Fagerli, H. and
                    Mar, K. and Otero, N. and Raffort, V. and Roustan, Y. and
                    Schaap, M. and Wind, P. and Colette, A.},
-  journal =       {Atmospheric Chemistry and Physics},
+  journal =       acp,
   number =        {1},
   pages =         {379--405},
   title =         {An evaluation of European nitrogen and sulfur wet
@@ -862,7 +1161,7 @@
                    Denier van der Gon, H. A. C. and Kuenen, J. J. P. and
                    van Meijgaard, E. and van Ulft, L. H. and Cofala, J. and
                    Builtjes, P. J. H.},
-  journal =       {Geoscientific Model Development},
+  journal =       gmd,
   number =        {4},
   pages =         {1047--1070},
   title =         {Dynamic model evaluation for secondary inorganic
@@ -1031,7 +1330,7 @@
                    Platt, S. M. and Pr\'ev\^ot, A. S. H. and Simpson, D. and
                    Solberg, S. and Surratt, J. and T{\o}rseth, K. and
                    Uggerud, H. and Vadset, M. and Wan, X. and Aas, W.},
-  journal =       {Atmospheric Chemistry and Physics},
+  journal =       acp,
   number =        {9},
   pages =         {7149--7170},
   title =         {Trends, composition, and sources of carbonaceous
@@ -1323,11 +1622,11 @@
 
 @article{SimpsonDarras:2021,
   author =        {Simpson, D. and Darras, S.},
-  journal =       {Earth System Science Data Discussions},
+  journal =       essd,
   pages =         {1--35},
   title =         {{Global soil NO emissions for Atmospheric Chemical
                    Transport Modelling: CAMS-GLOB-SOIL v2.2}},
-  volume =        {2021},
+  volume =        {in review},
   year =          {2021},
   doi =           {10.5194/essd-2021-221},
   url =           {https://essd.copernicus.org/preprints/essd-2021-221/},
@@ -1490,7 +1789,7 @@
 
 @article{Leonor:DMS2,
   author =        {L. Tarras\'{o}n and S. Turner and I. Floisand},
-  journal =       {J. Geophys. Res.},
+  journal =       jgr,
   pages =         {11623--11639},
   title =         {Estimation of seasonal dimethyl sulphide fluxes over
                    the North Atlantic Ocean and their contribution to
@@ -1502,7 +1801,7 @@
 @article{Kettle1999,
   author =        {Kettle, A. J. and Andreae, M. O. and et al. and
                    et al. and et al.},
-  journal =       {Global Biogeochem. Cycles},
+  journal =       gbc,
   number =        {2},
   pages =         {399--444},
   title =         {A global data base of sea surface dimethylsulfide
@@ -1524,7 +1823,7 @@
                    Saarto, A. and Segers, A. and Severova, E. and
                    Sauliene, I. and Siljamo, P. and Steensen, B. M. and
                    Teinemaa, E. and Thibaudon, M. and Peuch, V.-H.},
-  journal =       {Atmos. Chem. Physics},
+  journal =       acp,
   number =        {14},
   pages =         {8115--8130},
   title =         {MACC regional multi-model ensemble simulations of
@@ -1546,7 +1845,7 @@
                    Robertson, L. and Steensen, B. M. and Thibaudon, M. and
                    Segers, A. and Stepanovich, B. and Valdebenito, A. M. and
                    Vira, J. and Vokou, D.},
-  journal =       {Atmos. Chem. Physics},
+  journal =       acp,
   number =        {20},
   pages =         {12341--12360},
   title =         {Multi-model ensemble simulations of olive pollen
@@ -1572,7 +1871,7 @@
 @article{Stadtler2018,
   author =        {Stadtler, S. and Simpson, D. and Schr\"oder, S. and
                    Taraborrelli, D. and Bott, A. and Schultz, M.},
-  journal =       {Atmos. Chem. Physics},
+  journal =       acp,
   number =        {5},
   pages =         {3147--3171},
   title =         {Ozone impacts of gas--aerosol uptake in global
@@ -1589,13 +1888,10 @@
                    Emberson, Lisa and Uddling, Johan and Broberg, Malin and
                    Feng, Zhaozhong and Kobayashi, Kazuhiko and
                    Agrawal, Madhoolika},
-  journal =       {Global Change Biology},
-  number =        {0},
-  pages =         {},
-  title =         {Closing the global ozone yield gap: Quantification
+  journal =       gcb,
+   title =         {Closing the global ozone yield gap: Quantification
                    and cobenefits for multistress tolerance},
-  volume =        {0},
-  year =          {2018},
+   year =          {2018},
   abstract =      {Abstract Increasing both crop productivity and the
                    tolerance of crops to abiotic and biotic stresses is
                    a major challenge for global food security in our
@@ -1646,7 +1942,7 @@
                    Emberson, Lisa and Feng, Zhaozhong and Harmens, Harry and
                    Hayes, Felicity and Kobayashi, Kazuhiko and
                    Paoletti, Elena and Dingenen, Rita},
-  journal =       {Global Change Biol.},
+  journal =       gcb,
   pages =         {3560-3574},
   title =         {Ozone pollution will compromise efforts to increase
                    global wheat production},
@@ -1711,7 +2007,7 @@
   author =        {Mills, G. and Hayes, F. and Simpson, D. and
                    Emberson, L. and Norris, D. and Harmens, H. and
                    B{\"u}ker, P..},
-  journal =       {Global Change Biology},
+  journal =       gcb,
   number =        {1},
   pages =         {592--613},
   publisher =     {Blackwell Publishing Ltd},
@@ -1767,7 +2063,7 @@
                    Ignacio Gonz\'alez Fern\'andez and Harry Harmens and
                    Felicity Hayes and Per-Erik Karlsson and
                    David Simpson},
-  journal =       {Atmos. Environ.},
+  journal =       ae,
   number =        {28},
   pages =         {5064 - 5068},
   title =         {New stomatal flux-based critical levels for ozone
@@ -1886,7 +2182,7 @@
                    Pay, Maria-Teresa and Pozzoli, Luca and
                    Solazzo, Efisio and Tsyro, Svetlana and Unal, Alper and
                    Wind, Peter and Galmarini, Stefano},
-  journal =       {Atmos. Chem. Physics},
+  journal =       acp,
   month =         {{JUL 17}},
   number =        {{14}},
   pages =         {{10199-10218}},
@@ -1961,7 +2257,7 @@
   author =        {Crippa, M. and Janssens-Maenhout, G. and Dentener, F. and
                    Guizzardi, D. and Sindelarova, K. and Muntean, M. and
                    Van Dingenen, R. and Granier, C.},
-  journal =       {Atmospheric Chemistry and Physics},
+  journal =       acp,
   number =        {6},
   pages =         {3825--3841},
   title =         {Forty years of improvements in European air quality:
@@ -1977,7 +2273,7 @@
   author =        {Dals{\o}ren, S. B. and Myhre, C. L. and Myhre, G. and
                    Gomez-Pelaez, A. J. and S{\o}vde, O. A. and
                    Isaksen, I. S. A. and Weiss, R. F. and Harth, C. M.},
-  journal =       {Atmospheric Chemistry and Physics},
+  journal =       acp,
   number =        {5},
   pages =         {3099--3126},
   title =         {Atmospheric methane evolution the last 40 years},
@@ -1990,7 +2286,7 @@
 @article{Redington2009,
   author =        {A.L. Redington and R.G. Derwent and C.S. Witham and
                    A.J. Manning},
-  journal =       {Atmospheric Environment},
+  journal =       ae,
   number =        {20},
   pages =         {3227-3234},
   title =         {Sensitivity of modelled sulphate and nitrate aerosol
@@ -2136,8 +2432,7 @@
   year = {2014},
   volume = {9-10},
   pages = {9-19},
-  number = {0},
-  note = {SI: System dynamics and sustainability },
+  tmpnote = {SI: System dynamics and sustainability },
   doi = {http://dx.doi.org/10.1016/j.cosust.2014.07.008},
   issn = {1877-3435},
 }
