--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -10,7 +10,7 @@
 At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012. In order to assess the progress made towards achieving the environmental and health objectives of the Protocol, a
 list of questions was given to the subsidiary bodies of the Air Convention. Several of these questions were related to the trends of air pollution in Europe. 
 
-In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulfur dioxide, particulate matter (and their species; sulfate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulfur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO Air Quality Guidelines (AQG) values for PM$_{2.5}$ and PM$_{10}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
+In this Chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulfur dioxide, particulate matter (and their species; sulfate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulfur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO Air Quality Guidelines (AQG) values for PM$_{2.5}$ and PM$_{10}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
 
 Comparison of trends in measured and modelled VOCs is not included in this report. The main reasons are the lack of established procedures for doing such a comparison as well as the lack of proper monitoring sites with sufficient data capture and sufficient homogeneity in the monitoring during the 2000-2019 period. The topic of VOC trends will be investigated in more detail in the near future. 
 
@@ -450,11 +450,11 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \end{table}
 
 
-%\clearpage
+\clearpage
 
 \section{\label{sec:Trends_reduced nitrogen }Trends in reduced nitrogen}
 
-Ammonia emissions from agricultural activities have been only slightly reduced for the western EMEP domain since 2000 (-12\% in EU27+UK+EFTA countries). In the EMEP domain as a whole, ammonia emissions have increased by 12\% since 2000 (see chapter \ref{ch:emis2019}).
+Ammonia emissions from agricultural activities have been only slightly reduced for the western EMEP domain since 2000 (-12\% in EU27+UK+EFTA countries). In the EMEP domain as a whole, ammonia emissions have increased by 12\% since 2000 (see Chapter \ref{ch:emis2019}).
 
 With such small changes in emissions, clearly it is very difficult to detect any trends in the observations -- considering also that the meteorological variability introduces year to year changes of the same magnitude as the expected trends.
 Note that previous studies  \citep[e.g.][]{torseth2012,Theobald2019} have found decreasing trends for reduced nitrogen. However, those studies analyzed earlier periods (e.g. 1980--2009 or 1990--2009), where the reported ammonia emissions decreased more.
@@ -650,7 +650,7 @@ Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC in both o
 These points about model-measurement comparison for EC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
 \begin{table}
- \caption{As Tab~\ref{tab:so2_stat}, but for EC, and period 2010--2019.
+ \caption{As Tab~\ref{tab:so2_stat}, but for EC in \pmfine, and period 2010--2019.
  %Absolute change (\ugC/yr) and relative change (\%/yr) and
  % corresponding confidence intervals in observed and modelled annual
  % and seasonal aggregated EC concentrations at 15 sites across Europe
@@ -767,7 +767,7 @@ Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{table}
- \caption{As Tab~\ref{tab:so2_stat}, but for OC, and period 2010--2019.
+ \caption{As Tab~\ref{tab:so2_stat}, but for OC in \pmfine, and period 2010--2019.
  %Absolute change ( \ugC/yr) and relative change (\%/yr) and
  %  corresponding confidence intervals in observed and modelled annual
  %  and seasonal aggregated OC concentrations at 15 sites across Europe
@@ -903,8 +903,9 @@ for the observations.
 \begin{figure}
     \centering
     \includegraphics[width=12cm,trim=0 0 0 1.5cm,clip]{FIGS_TRENDS/PlotEmisTrends_PM2_5.png}
-    \caption{Trends in \pmfine emissions from GNFR C (mainly residential heating). Values in parentheses give relative trends (here linear regression slopes), for the periods 2000-2019 and 2010--2019.}
-    \label{fig:gnfrCtrends}
+    \parbox{12cm}{
+    \caption{Trends in \pmfine emissions from the GNFR C emission sector (mainly residential heating). Values in parentheses give relative trends (here linear regression slopes), for the periods 2000-2019 and 2010--2019.
+    \label{fig:gnfrCtrends}}}
 \end{figure}
 
  
@@ -1025,14 +1026,14 @@ of OM.
 
 \begin{table}
 \centering
-\parbox{14cm}{
+\parbox{14.5cm}{
  \caption{
    Absolute and relative change and the corresponding 95\% confidence intervals in observed and modelled annual and seasonal    aggregated OC/\pmfine and EC/\pmfine ratios at 15 sites across Europe
    for 2010--2019. The number of sites with a significant outcome is provided.\label{tab:KEX3}
  }}
  \scalebox{0.95}{%
  \begin{tabular}{lcccccc}
-\hline  % toprule
+\toprule
  &  &  &  &  &  &  \\
 \multicolumn{7}{c}{EC/\pmfine (2010--2019)} \\
   &  &  &  &  &  &  \\
@@ -1040,7 +1041,7 @@ of OM.
      \multicolumn{3}{c}{Number of sites} & \multicolumn{2}{l}{Absolute change (\ugC~yr$^{-1}$)} & \multicolumn{2}{l}{Relative change (\%~yr$^{-1}$)} \\
 {} &           total & sign. &                     abs &       Conf. interv. &                      \%/yr &   Conf. interv. \\
 %How   &                 &       &                         &                     &                          &                 \\
-\hline  % midrule
+\hline % midrule
 Model &              15 &     5 &                 -0.0006 &  (-0.0009, -0.0004) &                    -1.71 &   (-2.32, -1.1) \\
 Obs.  &              15 &     4 &                 -0.0009 &  (-0.0012, -0.0006) &                    -2.41 &  (-2.96, -1.85) \\
 \hline  % bottomrule
@@ -1056,7 +1057,7 @@ Obs.  &              15 &     4 &                 -0.0009 &  (-0.0012, -0.0006) 
 \hline  % midrule
 Model &              15 &     7 &                  0.0029 &   (0.0018, 0.004) &                     2.35 &     (1.3, 3.4) \\
 Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) &                     0.19 &  (-1.24, 1.62) \\
-\hline  % bottomrule
+\bottomrule
 \end{tabular}
 } % end scalebox
 \end{table}
@@ -1123,7 +1124,7 @@ As Tab.~\ref{tab:so2_stat}, but for \pmten.}
 \scalebox{0.67}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug/yr} & \multicolumn{4}{c}{Relative change (~\%/yr)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug/yr}) & \multicolumn{4}{c}{Relative change (~\%/yr)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval &  
 mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
        &         &       & obs. & mod. &       &               &  
@@ -1144,12 +1145,13 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 
 
 \begin{table}
-\caption{\label{tab:pm25_stat} Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated concentration of \PM[25] for the different time periods. The number of sites with a significant outcome is provided.}
+\caption{\label{tab:pm25_stat} As Tab.~\ref{tab:so2_stat}, but for \pmfine}
+%Absolute and relative change and corresponding 95\% confidence intervals in observed %and modelled annual and seasonal aggregated concentration of \PM[25] for the %different time periods. The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.67}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug/yr} & \multicolumn{4}{c}{Relative change (~\%/yr)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug/yr}) & \multicolumn{4}{c}{Relative change (~\%/yr)} \\
 Period & Seasons & Tot. & sign. & sign. & obs. & conf.interval &  
 mod. & conf.interval & obs. & conf.interval &  mod. & conf.interval \\
       &          &      & obs. & mod. &        &              &  
@@ -1175,8 +1177,9 @@ mod. & conf.interval & obs. & conf.interval &  mod. & conf.interval \\
   \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_PM10_2000-2019_Perc.pdf}}\\
 %  \vspace{0.5cm}
   \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_PM25_2000-2019_Perc.pdf}}
-\caption{Relative trends for \PM[10] and \PM[2.5] in the period of 2000--2019: EMEP modelled -- coloured contours (grey/white means non-significant trends) and observed - coloured triangles (significant) and circles (non-significant).}
-\label{fig:PMtrends}
+\caption{As fig.~\ref{fig:Strends_map}, but for \pmten (top) and \pmfine (bottom)
+%Relative trends for \PM[10] and \PM[2.5] in the period of 2000--2019: EMEP modelled %-- coloured contours (grey/white means non-significant trends) and observed - %coloured triangles (significant) and circles (non-significant).}
+\label{fig:PMtrends}}
 \end{figure}
 
 
@@ -1215,7 +1218,6 @@ During this 20-year period, \PM[10] concentrations decreased on average 35\% in 
 %Furthermore, 
 Figure \ref{fig:pmExc_trends} presents the changes in the number of sites at which the annual mean \PM[10] and \PM[2.5] exceeded WHO AQG recommended levels (20 and 10 \ug respectively) for the period 2001 to 2019. Both results from observations and model calculations are shown. Same as for PM trend analysis, only the sites with observations satisfying a criteria of 75\% data coverage for each year have been included. The additional requirement here was that the observations at each site should be available for all analysed years (while for the PM trend analysis, the 75\% coverage requirement was applied, resulting in a minimum of 14 years for the 2000-2019 period, see Section~\ref{sec:Method}. For the analysis of the number of sites with PM exceedances, it is essential that the number of sites included are the same for all the years. Therefore it was decided to exclude the year 2000, in which much fewer sites satisfied the data time coverage criteria, and look at the period 2001--2019. 
 
-\SKIP{DAVE'S MARKER. GOT TO HERE......}
 % V1 Only sites with observations for all the years from 2001 has been considered, using a criteria of 75\% coverage in time per year (the year 2000 has been excluded due to few sites that passed the 75\% time coverage criteria). 
 
 %Thus, a stricter criteria than the 75\% data coverage over the time period, used for the trend assessment, was applied.
@@ -1235,22 +1237,22 @@ Figure \ref{fig:pmExc_trends} indicates that the number of sites with exceedance
 
 
 
-\clearpage
+%\clearpage
 \section{\label{sec:Trends_O3}Trends in O$_3$ }
 
 Trend studies of surface ozone require a somewhat different approach than other species since ambient ozone levels are the result of a substantial baseline level with episodes on top. 
  Whereas NOx often leads to ozone formation in rural areas in the summer season, it can cause depletion of ozone by titration in and downwind of urban areas, especially in winter.
-Thus, the effect of man-made emissions of ozone precursors as NOx (in combination with VOCs) is to change the distribution of hourly and daily ozone concentrations during a year with high ozone levels in the summer half year and low ozone levels in the winter half year. Furthermore, the extent of these perturbations is significantly determined by the weather conditions and thereby by the ongoing climate change. Harmful levels of surface ozone are closely linked to high-pressure situations with elevated temperatures and strong solar radiation.
+Thus, the effect of man-made emissions of ozone precursors such as NOx (in combination with VOCs) is to change the distribution of hourly and daily ozone concentrations during a year with high ozone levels in the summer half year and low ozone levels in the winter half year. Furthermore, the extent of these perturbations is significantly determined by the weather conditions and thereby by the ongoing climate change. Harmful levels of surface ozone are closely linked to high-pressure situations with elevated temperatures and strong solar radiation.
 
 Thus, the selection of ozone metrics is decisive for the estimated trends \citep[e.g.][]{LefohnTOAR2018}. The annual mean concentration used for evaluating other species is of little interest when studying ozone. A common procedure is to look at the trend in the probability distribution of ozone, e.g. by calculating trends for various percentiles of the distribution \citep[e.g.][]{SimpsonCOSUST2014}.  
 
-As explained above, the trends in six percentiles (10, 50, 75, 95, 98 and 99) of the daily maximum O$_3$ values were calculated for stations with at least 330 valid daily data each year. This corresponds to 90~\% data capture in the individual years. The 10th percentile corresponds to the 37th lowest daily maximum value while the 99th percentile corresponds to the 4th highest daily maximum. 
+As explained above, the trends in six percentiles (10, 50, 75, 95, 98 and 99) of the daily maximum O$_3$ values were calculated for stations with at least 330 valid daily data each year. This corresponds to 90\% data capture in the individual years. The 10th percentile corresponds to the 37th lowest daily maximum value while the 99th percentile corresponds to the 4th highest daily maximum. 
 
 Figure \ref{fig:O3_boxplot} shows the calculated Sen's slopes for these six percentiles for the period 2000--2019 for EMEP sites north and south of 49\degrees N based on observed and modelled data. Both significant and non-significant slopes were included, but stations above 1200~m altitude were not included in the trend statistics. The reason for differing the altitude criteria for trend calculations vs that for evaluating the 2019 levels as discussed in Ch 2.4 (1200~m vs 500~m) was that the latter is more focused on individual daily data whereas the trends are based on aggregated statistics (annual data). 
 
 For both the observed and modelled data the trends show an increase in the 10th percentile and with a gradually stronger decrease in the higher percentiles. This is as expected when the emission of precursors (NOx) is reduced with time. The increase in the 10th percentile is explained by reduced titration by NOx while the the decreasing trend in the highest percentiles is explained by reduced photochemical formation of ozone in summer. The net result of these trends is a narrowing of the distribution of O$_3$ concentrations. 
 
-Figure \ref{fig:O3_boxplot} shows the trends in annual percentiles for sites north and south of 49\degrees N. In general the agreement is rather good, with the model agreeing very well with the observations for the high percentiles for stations N of 49\degrees, though overestimating somewhat the decrease of the high percentiles (95-99) for stations south of 49\degrees N. This is an important finding since these percentiles are the main indicators for surface ozone pollution events. Figure \ref{fig:O3_boxplot} furthermore shows that the spread in the observed data is significantly larger than the spread in modelled data which is as expected. A grid model will inevitably reduce local geographical differences and produce smoothed concentrations fields. 
+Figure \ref{fig:O3_boxplot} shows the trends in annual percentiles for sites north and south of 49\degrees N. In general the agreement is rather good, with the model agreeing very well with the observations for the high percentiles for stations N of 49\degrees, though overestimating somewhat the decrease of the high percentiles (95--99) for stations south of 49\degrees N. This is an important finding since these percentiles are the main indicators for surface ozone pollution events. Figure \ref{fig:O3_boxplot} furthermore shows that the spread in the observed data is significantly larger than the spread in modelled data which is as expected. A grid model will inevitably reduce local geographical differences and produce smoothed concentrations fields. 
 
 For the 10th percentile, the model overestimates the increase both north and south of \mbox{49\degrees~N}. It is not obvious what this overestimation is due to. It could reflect that NOx in winter is not reduced as much as the emissions and the model assume, or it could e.g. reflect deficiencies in the model description of atmospheric vertical stability and exchange of pollutants in winter. A possible underprediction of European NOx emissions was suggested as a likely cause of model underprediction of peak ozone and over prediction of low ozone by \citet{Oikonomakis2018}.
 
@@ -1267,7 +1269,7 @@ Trends in ozone metrics linked to harmful effects on vegetation (AOT40) and on h
 
 Figures \ref{fig:O3_aot40croptrends} and \ref{fig:O3_aot40foresttrends} show a clear underestimation by the model compared to the observed data, in particular for the southern sites. Both the modelled and observed data do however indicate a marked decreasing trend during 2000--2019. For SOMO35 (Fig.\ref{fig:O3_somo35trends}), the model calculations agree very well with the observed data, both with respect to the absolute levels and the trends. For the southern sites, a slight underestimation is seen in the peak years (2003 and 2018) though. 
 
-Summary statistics for the observed and modelled trends during 2000-2019 for the 75th and 99th percentiles as well as SOMO35, AOT40 for crops and AOT40 for forests are given in Table~\ref{tab:O3_stat} for sites north and south of 49\degrees N. These data show the mean trend (as absolute values and relative to 2000 in percent) as calculated by the Theil-Sen's slope. The slopes for the percentiles were calculated by the pyaerocom tool as explained above while the slopes for SOMO35 and AOT40 were calculated by the R libraries 'Kendall' \citep{McLeod_2011} and 'zyp' \citep{Bronaugh_Werner_2019}. 
+Summary statistics for the observed and modelled trends during 2000--2019 for the 75th and 99th percentiles as well as SOMO35, AOT40 for crops and AOT40 for forests are given in Table~\ref{tab:O3_stat} for sites north and south of 49\degrees N. These data show the mean trend (as absolute values and relative to 2000 in percent) as calculated by the Theil-Sen's slope. The slopes for the percentiles were calculated by the pyaerocom tool as explained above while the slopes for SOMO35 and AOT40 were calculated by the R libraries 'Kendall' \citep{McLeod_2011} and 'zyp' \citep{Bronaugh_Werner_2019}. 
 
 In addition to the mean trends, the confidence intervals for these mean values are also given. The confidence intervals were computed by standard bootstrapping techniques \citep{DavisonHinkley:1997} using the R library 'boot' (basic bootstrap method with 1000 resamples). Various bootstrap method were tested out and compared to direct calculations of the confidence intervals based on the sample mean and sample standard deviation. These comparisons showed that the various methods produced very similar estimates of the confidence intervals for the mean values and thus we conclude that the confidence intervals for the means are fairly robust. These confidence intervals could be used to judge if the mean observed trends differ from the mean modelled trends.
 
@@ -1281,7 +1283,9 @@ For SOMO35 and AOT40 the number of sites with significant trends in the observat
 
 
 \begin{table}
-\caption{\label{tab:O3_stat} The estimated mean values of the absolute and relative trends (2000--2019) in O$_3$ metrics based on stations north and south of 49\degrees N (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided. Results are given for the 75th and 99th percentile of daily maximum ozone, as well as for SOMO35 and AOT40 for crops (AOT40c) forests (AOT40f). Note that here we use the EU definition of AOT40 (c.f. Sect.~\ref{DEFS}). Note that the number of significant (`sign.') sites for `obs' and `mod' refer to the number of sites with p<0.05, whereas changes are calculated across all sites.}
+\caption{\label{tab:O3_stat} As Tab.~\ref{tab:so2_stat}, but for 
+O$_3$ metrics based on stations north and south of 49\degrees N. Results are given for the 75th and 99th percentile of daily maximum ozone, as well as for SOMO35 and AOT40 for crops (AOT40c) forests (AOT40f). Note that here we use the EU definition of AOT40 (c.f. Sect.~\ref{DEFS}).}
+%The estimated mean values of the absolute and relative trends (2000--2019) in O$_3$ %metrics based on stations north and south of 49\degrees N (observed and modelled). %The corresponding 95\% confidence intervals of these mean values and the number of %sites with significant trends are also provided. Results are given for the 75th and %99th percentile of daily maximum ozone, as well as for SOMO35 and AOT40 for crops %(AOT40c) forests (AOT40f). Note that here we use the EU definition of AOT40 (c.f. %Sect.~\ref{DEFS}). Note that the number of significant (`sign.') sites for `obs' and `%mod' refer to the number of sites with p<0.05, whereas changes are calculated %across all sites.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{Hll|ccc|cccc|cccc}
@@ -1308,6 +1312,7 @@ Period & Area & Parameter &           total & obs & mod &                    obs
 \end{table}
 
 
+\SKIP{DAVE'S MARKER. GOT TO HERE......}
 
 
 \begin{figure}[h]
