--- a/report.tex
+++ b/report.tex
@@ -336,7 +336,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterTrendsSandN,chapterAPPX_ModelEval}
+%\includeonly{ExSummary,chapterTrendsSandN,chapterAPPX_ModelEval}
 %\includeonly{chapterMeasurementDevelopments}
 %\includeonly{chapterStatus2019,chapterEmis2019}
 
